took out handle click for icons

--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -3,7 +3,7 @@
 .topbar {
     width: 100%;
     height: 70px;
-    background-color: #f1897b;
+    background-color: #faac1f;
     color: snow;
     position: fixed;
     top: 0;
