--- a/src/components/work/mywork.scss
+++ b/src/components/work/mywork.scss
@@ -12,6 +12,8 @@
 
     h1{
         font-size: 50px;
+        color: white;
+        
 
         @include mobile{
             font-size: 20px;
@@ -33,7 +35,7 @@
 
         .card{
             width: 320px;
-            height: 55%;
+            height: 70%;
             border-radius: 10px;
             box-shadow: 0px 0px 15px -8px blue;
             display: flex;
