--- a/src/global.scss
+++ b/src/global.scss
@@ -1,4 +1,8 @@
-$mainColor: #15023a;
+$mainPinkColor: #eb5949;
+$mainBlueColor: #79bbbf;
+$mainYellowColor: #f9aa1e;
+$mainLightBlueColor: #e7f7f6;
+$mainWhiteColor: snow;
 
 $width: 768px;
 
