--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -2,7 +2,7 @@
 
 
 .portfolio {
-    background-color:#fbeceb;
+    background-color: $mainLightBlueColor;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -77,10 +77,11 @@
             }
 
             &:hover{
-                background-color:#86cccc;
+                background-color:$mainBlueColor;
                 img{
                     opacity: 0.2;
                     z-index: 0;
+        
                 }
 
             }
@@ -89,6 +90,8 @@
         }
         .itemText {
             display: flex;
+        
+
         }
     }
 }
