--- a/src/components/portfolioList/portfolioList.scss
+++ b/src/components/portfolioList/portfolioList.scss
@@ -12,7 +12,7 @@
     }
 
     &.active {
-        background-color: #86cccc;
+        background-color: $mainBlueColor;
         color:white;
     }   
 }
