--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -3,7 +3,7 @@
 .topbar {
     width: 100%;
     height: 70px;
-    background-color: #faac1f;
+    background-color:$mainPinkColor;
     color: snow;
     position: fixed;
     top: 0;
@@ -23,13 +23,12 @@
         align-items: center;
 
         .logo{
-            font-size: 40px;
+            font-size: 45px;
             font-weight: 700;
             text-decoration: none;
             color: inherit;
             margin-right: 40px;
             font-family: 'Satisfy', cursive;
-            text-decoration: underline;
             }
         .itemContainer{
             display: flex;
@@ -43,6 +42,7 @@
             .icon {
                 font-style: 18px;
                 margin-right: 5px;
+            
             }
 
             span{
