--- a/src/components/work/mywork.scss
+++ b/src/components/work/mywork.scss
@@ -1,7 +1,7 @@
 @import '../../global.scss';
 
 .myWork {
-    background-color: #fbeceb;
+    background-color: $mainLightBlueColor;
     display: flex;
     align-items:center;
     flex-direction: column;
@@ -12,7 +12,7 @@
 
     h1{
         font-size: 50px;
-        color: white;
+        color: #000000;
         
 
         @include mobile{
@@ -22,25 +22,26 @@
 
     .container{
         width: 100%;
-        height: 80%;
+        height: 100%;
         display: flex;
+        
         align-items: center;
         justify-content: center;
 
         @include mobile{
             flex-direction: column;
-            height: 100%;
+            height: 90%;
         
         }
 
         .card{
             width: 320px;
-            height: 70%;
+            height: 60%;
             border-radius: 10px;
-            box-shadow: 0px 0px 15px -8px blue;
+            box-shadow: 0px 0px 15px -8px #4ec1ea;
             display: flex;
             flex-direction: column;
-            justify-content: space-around;
+            // justify-content: space-around;
             padding: 5px;
             background-color: snow;
             transition: all 1s ease;
@@ -68,7 +69,7 @@
 
             &:hover{
                 transform:scale(1.1);
-                background-color:#f94c5f;
+                background-color:#ed6246;
                 img{
                     opacity: 1;
                     z-index: 0;
@@ -80,64 +81,64 @@
 
 
 
-            .top {
-                display: flex;
-                align-items: center;
-                justify-content: center;
+            // .top {
+            //     display: flex;
+            //     align-items: center;
+            //     justify-content: center;
 
-                img{
-                    &.left, &.right{
-                        padding-top: 200px;
-                        height: 30px;
-                     }
+            //     img{
+            //         &.left, &.right{
+            //             padding-top: 200px;
+            //             height: 30px;
+            //          }
 
-                     &.project{
-                         height: 200px;
-                         width: 300px;
-                         object-fit: cover;
-                        //  margin: 50px  10px;
-                        margin-bottom: 100px;
+            //          &.project{
+            //              height: 200px;
+            //              width: 300px;
+            //              object-fit: cover;
+            //             //  margin: 50px  10px;
+            //             margin-bottom: 100px;
                         
-                        @include mobile{
-                            width: 30px;
-                            height: 30px;
+                        // @include mobile{
+                        //     width: 30px;
+                        //     height: 30px;
           
-                          }
+                        //   }
                     
-                     }
-                }
-            }
-            .center{
-                padding: 10px;
-                // margin-left:px;
-                // align-items: center;
-                // justify-content: center;
-                // flex-direction: column;
-                // display: flex;
-                background-color: snow;
+                    //  }
+                // }
+            // }
+            // .center{
+            //     padding: 10px;
+            //     // margin-left:px;
+            //     // align-items: center;
+            //     // justify-content: center;
+            //     // flex-direction: column;
+            //     // display: flex;
+            //     background-color: snow;
 
-                @include mobile{
-                font-size: 12px;
-                padding: 5px; 
+            //     @include mobile{
+            //     font-size: 12px;
+            //     padding: 5px; 
   
-                  }
-            }
-            .bottom{
-                display: flex;
-                align-items: center;
-                flex-direction: column;
-                justify-content: center;
+            //       }
+            // }
+            // .bottom{
+            //     display: flex;
+            //     align-items: center;
+            //     flex-direction: column;
+            //     justify-content: center;
 
-            h3{
-                margin-bottom: 5px;
+            // h3{
+            //     margin-bottom: 5px;
                 
 
-                @include mobile{
-                    font-size: 14px;
-                }
-            }
+            //     @include mobile{
+            //         font-size: 14px;
+            //     }
+            // }
 
-            }
+            // }
 
 
 
