added more styling

--- a/src/global.scss
+++ b/src/global.scss
@@ -1,7 +1,7 @@
 $mainPinkColor: #eb5949;
 $mainBlueColor: #79bbbf;
 $mainYellowColor: #f9aa1e;
-$mainLightBlueColor: #e7f7f6;
+$mainLightBlueColor: #f2fffe;
 $mainWhiteColor: snow;
 
 $width: 768px;
