--- a/src/components/work/mywork.scss
+++ b/src/components/work/mywork.scss
@@ -38,7 +38,7 @@
             width: 320px;
             height: 60%;
             border-radius: 10px;
-            box-shadow: 0px 0px 15px -8px #4ec1ea;
+            box-shadow: 0px 0px 15px -8px #1ebbf4;
             display: flex;
             flex-direction: column;
             // justify-content: space-around;
@@ -46,6 +46,7 @@
             background-color: snow;
             transition: all 1s ease;
             margin: 20px;
+            text-decoration: none;
 
             @include mobile{
                 height: 200px;
