--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -4,7 +4,7 @@
     width: 100%;
     height: 70px;
     background-color:$mainPinkColor;
-    color: snow;
+    color: $mainWhiteColor;
     position: fixed;
     top: 0;
     z-index: 2;
