switch case for technologies

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -77,7 +77,7 @@
             }
 
             &:hover{
-                background-color:$mainBlueColor;
+                background-color:$mainYellowColor;
                 img{
                     opacity: 0.2;
                     z-index: 0;
