--- a/src/components/portfolioList/portfolioList.scss
+++ b/src/components/portfolioList/portfolioList.scss
@@ -1,8 +1,9 @@
 @import '../../global.scss';
 
    .portfolioList{
-    font-size: 14px;
+    font-size: 16px;
     margin-right: 50px;
+    font-weight: bold;
     padding: 7px;
     border-radius: 10px;
     cursor: pointer;
@@ -12,7 +13,7 @@
     }
 
     &.active {
-        background-color: $mainBlueColor;
+        background-color: $mainYellowColor;
         color:white;
     }   
 }
